# sv2-ui

./: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: monitoring-api-compatibility.md
server/: package.json
server/asic-bridge/: Cargo.toml  Dockerfile  README.md
server/asic-bridge/src/: main.rs  sv2_capability.rs
server/src/: active-pool.test.ts  active-pool.ts  benchmark.test.ts  benchmark.ts  bitcoin-socket-exists.ts  bitcoin-socket-validator.ts  compatibility.ts  config-generator.test.ts  config-generator.ts  docker.ts  images.test.ts  index.ts  messages.ts  pool-validation.test.ts  pool-validation.ts  scan.ts  telegram.test.ts  telegram.ts  types.ts
server/src/logs/: diagnostics.ts  types.ts
shared/: openapi.json  tsconfig.json
shared/src/: constants.ts  format.ts  images.ts  index.ts  pools.ts  types.ts
src/: App.tsx  index.css
src/components/: AdvancedMiningConfigForm.test.ts  ExperimentalTab.test.ts
src/hooks/: useBenchmark.ts  useBitcoinRpcDiscovery.ts  useBitcoinSocketValidation.ts  useExperimentalFeatures.test.ts  useExperimentalFeatures.ts  useHashrateHistory.ts  useHostEnv.ts  usePoolData.ts  useSetupStatus.ts  useTelegram.ts  useUiConfig.ts
src/lib/: messages.ts  miningIdentity.test.ts  miningIdentity.ts  poolValidation.ts  pools.test.ts  pools.ts  ports.ts  utils.test.ts  utils.ts
src/pages/: Benchmark.tsx  PoolStats.tsx  Settings.tsx  UnifiedDashboard.tsx
src/types/: api-generated.ts  api.ts  log-diagnostics.ts
(+46 files in other folders)
